# kasparro-backend-pranav-raj

./: README.md
kasparro-etl-assignment/: COMPLETION_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DEPLOY_TODAY.md  DEPLOY_TO_RAILWAY_NOW.md  Dockerfile  EASY_DEPLOY.md  EMERGENCY_FIX.md  FINAL_RAILWAY_FIX.md  FINAL_SUMMARY.md  FIX_NOW.sh  FIX_RENDER_NOW.md  FIX_REQUIREMENTS_TXT.md  HELP_ME_DEPLOY.md  LOCAL_TEST_RESULTS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_RAILWAY_FIX.md  RAILWAY_EXACT_STEPS.md  RAILWAY_FIX.md  RAILWAY_FIX_NOW.md  README.md  READY_TO_SUBMIT.md  RENDER_FIX.md  RENDER_ROOT_DIRECTORY_FIX.md  START_HERE.md  STEP_BY_STEP_RAILWAY.md  SUBMISSION_CHECKLIST.md  SUBMISSION_README.md  URGENT_FIX.md  deploy.sh  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  (+2 more)
kasparro-etl-assignment/alembic/versions/: 001_initial_schema.py
kasparro-etl-assignment/app/: __init__.py  main.py
kasparro-etl-assignment/app/api/: health.py  routes.py  stats.py
kasparro-etl-assignment/app/core/: db.py
kasparro-etl-assignment/app/ingestion/: __init__.py  coingecko.py  (+1 more)
kasparro-etl-assignment/cloudformation/: kasparro-etl.yaml
kasparro-etl-assignment/data/: sample.csv
kasparro-etl-assignment/kasparro-etl/: kasparro.db
kasparro-etl-assignment/kasparro-etl-assignment/: Makefile  README.md  alembic.ini  nixpacks.toml  railway.json  setup.sh
kasparro-etl-assignment/terraform/: main.tf  variables.tf
kasparro-etl-assignment/tests/: test_etl.py  test_failure.py
(+16 files in other folders)
